--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -72,7 +72,7 @@
                                         <h5 class="mb-0">Total <span class="floatright">$500.00</span></h5>
                                     </div>
                                     <div class="cart-bottom  clearfix">
-                                        <a href="cart.html" class="button-one floatleft text-uppercase" data-text="View cart">View cart</a>
+                                        <a href="/order/shopcart/" class="button-one floatleft text-uppercase" data-text="View cart">View cart</a>
                                         <a href="checkout.html" class="button-one floatright text-uppercase" data-text="Check out">Check out</a>
                                     </div>
                                 </div>
