--- a/order/templates/cart.html
+++ b/order/templates/cart.html
@@ -78,7 +78,7 @@
 																<td class="product-price">$56.00</td>
 																<td class="product-quantity">
 																	<div class="cart-plus-minus">
-																		<input type="text" value="02" name="qtybutton" class="cart-plus-minus-box">
+																		<input type="text" value="{{ item.quantity }}" name="qtybutton" class="cart-plus-minus-box">
 																	</div>
 																</td>
 																<td class="product-subtotal">$112.00</td>
