--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -29,7 +29,7 @@
             <div class="row">
                 <div class="col-md-4 offset-md-4 col-7">
                     <div class="logo text-md-center">
-                        <a href="index.html"><img src="{% static 'img/logo/logo.png'%}" alt="" /></a>
+                        <a href="/"><img src="{% static 'img/logo/logo.png'%}" alt="" /></a>
                     </div>
                 </div>
                 <div class="col-md-4 col-5">
@@ -38,35 +38,27 @@
                             <li>
                                 <a class="cart-icon" href="#">
                                     <i class="zmdi zmdi-shopping-cart"></i>
-                                    <span>3</span>
+                                    <span>{{shopcart_details.count}}</span>
                                 </a>
                                 <div class="mini-cart-brief text-left">
                                     <div class="cart-items">
-                                        <p class="mb-0">You have <span>03 items</span> in your shopping bag</p>
+                                        <p class="mb-0">You have <span>{{shopcart_details.count}}items</span> in your shopping bag</p>
                                     </div>
                                     <div class="all-cart-product clearfix">
+                                        {% for pro in shopcart_details %}
                                         <div class="single-cart clearfix">
                                             <div class="cart-photo">
-                                                <a href="#"><img src="{% static 'img/cart/1.jpg'%}" alt="" /></a>
+                                                <a href="#"><img src="{{ pro.product.image.url }}" alt="" /></a>
                                             </div>
                                             <div class="cart-info">
-                                                <h5><a href="#">dummy product name</a></h5>
-                                                <p class="mb-0">Price : $ 100.00</p>
-                                                <p class="mb-0">Qty : 02 </p>
+                                                <h5><a href="#">{{pro.product.title}}</a></h5>
+                                                <p class="mb-0">Price : $ {{pro.product.sale_price}}</p>
+                                                <p class="mb-0">Qty : {{ pro.quantity }} </p>
                                                 <span class="cart-delete"><a href="#"><i class="zmdi zmdi-close"></i></a></span>
                                             </div>
                                         </div>
-                                        <div class="single-cart clearfix">
-                                            <div class="cart-photo">
-                                                <a href="#"><img src="{% static 'img/cart/2.jpg'%}" alt="" /></a>
-                                            </div>
-                                            <div class="cart-info">
-                                                <h5><a href="#">dummy product name</a></h5>
-                                                <p class="mb-0">Price : $ 300.00</p>
-                                                <p class="mb-0">Qty : 01 </p>
-                                                <span class="cart-delete"><a href="#"><i class="zmdi zmdi-close"></i></a></span>
-                                            </div>
-                                        </div>
+                                        {% endfor %}
+
                                     </div>
                                     <div class="cart-totals">
                                         <h5 class="mb-0">Total <span class="floatright">$500.00</span></h5>
@@ -92,48 +84,25 @@
     <div class="main-menu  d-none d-md-block">
         <nav>
             <ul>
-                <li><a href="index.html">home</a>
-                    <div class="sub-menu menu-scroll">
-                        <ul>
-                            <li class="menu-title">Page's</li>
-                            <li><a href="index.html">Home Version 1</a></li>
-                            <li><a href="index-2.html">Home Version 2</a></li>
-                        </ul>
-                    </div>
+                <li><a href="/">home</a>
+
                 </li>
                 <li><a href="/shop/products/">products</a>
                     <div class="mega-menu menu-scroll">
                         <div class="table">
                             <div class="table-cell">
+                                {% for data in header_data %}
                                 <div class="half-width">
                                     <ul>
-                                        <li class="menu-title">best brands</li>
-                                        <li><a href="#">henning koppel</a></li>
-                                        <li><a href="#">jehs + Laub</a></li>
-                                        <li><a href="#">vicke lindstrand</a></li>
-                                        <li><a href="#">don chadwick</a></li>
-                                        <li><a href="#">akiko kuwahata</a></li>
-                                        <li><a href="#">barbro berlin</a></li>
-                                        <li><a href="#">cecilia hall</a></li>
-                                        <li><a href="#">don chadwick</a></li>
+                                        <li class="menu-title">{{data.category.name}}</li>
+                                        <li><a href="#">{{data.name}}</a></li>
+
                                     </ul>
                                 </div>
-                                <div class="half-width">
-                                    <ul>
-                                        <li class="menu-title">popular brands</li>
-                                        <li><a href="#">akiko kuwahata</a></li>
-                                        <li><a href="#">barbro berlin</a></li>
-                                        <li><a href="#">cecilia hall</a></li>
-                                        <li><a href="#">don chadwick</a></li>
-                                        <li><a href="#">henning koppel</a></li>
-                                        <li><a href="#">jehs + Laub</a></li>
-                                        <li><a href="#">vicke lindstrand</a></li>
-                                        <li><a href="#">don chadwick</a></li>
-                                    </ul>
-                                </div>
+                                {% endfor %}
                                 <div class="full-width">
                                     <div class="mega-menu-img">
-                                        <a href="single-product.html"><img src="{% static 'img/megamenu/1.jpg'%}" alt="" /></a>
+                                        <a href="single-product.html"><img src="" alt="banner" /></a>
                                     </div>
                                 </div>
                                 <div class="pb-80"></div>
@@ -141,62 +110,9 @@
                         </div>
                     </div>
                 </li>
-                <li><a href="#">Shortcodes</a>
-                    <div class="sub-menu menu-scroll">
-                        <ul>
-                            <li class="menu-title">Shortcodes</li>
-                            <li><a href="elements-accordions.html">Accordion</a></li>
-                            <li><a href="elements-toggles.html">Toggles</a></li>
-                            <li><a href="elements-tab.html">Tab</a></li>
-                            <li><a href="elements-product-tab.html">Product Tab</a></li>
-                            <li><a href="elements-product-tab-2.html">Product Tab 2</a></li>
-                            <li><a href="elements-carousel.html">product carousel</a></li>
-                            <li><a href="elements-carousel-2.html">product carousel 2</a></li>
-                            <li><a href="elements-featured-product.html">Featured Product</a></li>
-                            <li><a href="elements-featured-product-2.html">Featured Product 2</a></li>
-                            <li><a href="elements-button.html">Button</a></li>
-                            <li><a href="elements-table.html">Table</a></li>
-                            <li><a href="elements-progress-bars.html">Progress Bar</a></li>
-                            <li><a href="elements-blog.html">Blog</a></li>
-                            <li><a href="elements-blog-2.html">Blog - 2</a></li>
-                            <li><a href="elements-team.html">Team</a></li>
-                            <li><a href="elements-footer.html">Footer</a></li>
-                            <li><a href="elements-footer-2.html">Footer 2</a></li>
-                            <li><a href="elements-map.html">Map</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li><a href="shop-sidebar.html">accesories</a></li>
-                <li><a href="shop-list.html">lookbook</a></li>
-                <li><a href="blog.html">blog</a></li>
-                <li><a href="#">pages</a>
-                    <div class="sub-menu menu-scroll">
-                        <ul>
-                            <li class="menu-title">Page's</li>
-                            <li><a href="shop.html">Shop</a></li>
-                            <li><a href="shop-sidebar.html">Shop Sidebar</a></li>
-                            <li><a href="shop-grid-right-sidebar.html">Shop Right Sidebar</a></li>
-                            <li><a href="shop-list.html">Shop List</a></li>
-                            <li><a href="shop-list-right-sidebar.html">Shop List right sidebar</a></li>
-                            <li><a href="single-product.html">Single Product</a></li>
-                            <li><a href="single-product-sidebar.html">Single Product Sidebar</a></li>
-                            <li><a href="cart.html">Shopping Cart</a></li>
-                            <li><a href="wishlist.html">Wishlist</a></li>
-                            <li><a href="checkout.html">Checkout</a></li>
-                            <li><a href="order.html">Order</a></li>
-                            <li><a href="login.html">login / Registration</a></li>
-                            <li><a href="my-account.html">My Account</a></li>
-                            <li><a href="404.html">404</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="single-blog.html">Single Blog</a></li>
-                            <li><a href="single-blog-sidebar.html">Single Blog Sidebar</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li><a href="about.html">about us</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li><a href="/blog/">blog</a></li>
+                <li><a href="/about_us/">about us</a></li>
+                <li><a href="/contact/">contact</a></li>
             </ul>
         </nav>
     </div>
