--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -400,7 +400,7 @@
 												<span class="pro-label new-label">new</span>
 												<a href="single-product.html"><img style="width:270px;height:270px;" src="{{ pro.image.url }}" alt="" /></a>
 												<div class="product-action clearfix">
-													<a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Wishlist"><i class="zmdi zmdi-favorite-outline"></i></a>
+													<a href="{% url 'order:addtowishlist' pro.id %}" data-bs-toggle="tooltip" data-placement="top" title="Wishlist"><i class="zmdi zmdi-favorite-outline"></i></a>
 													<a href="#" data-bs-toggle="modal"  data-bs-target="#productModal" title="Quick View"><i class="zmdi zmdi-zoom-in"></i></a>
 													<a href="#" data-bs-toggle="tooltip" data-placement="top" title="Compare"><i class="zmdi zmdi-refresh"></i></a>
 													<a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Cart"><i class="zmdi zmdi-shopping-cart-plus"></i></a>
