--- a/shop/templates/single_product.html
+++ b/shop/templates/single_product.html
@@ -102,11 +102,10 @@
 												<button class="single_add_to_cart_button" type="submit">Add to cart</button>
 											</form>
 										</div>
-										<div class="product-action clearfix">
+										<div class="product-action clearfix" style="width:10%;height: 40px;">
+											<button class="single_add_to_cart_button">
 											<a href="wishlist.html" data-bs-toggle="tooltip" data-placement="top" title="Wishlist"><i class="zmdi zmdi-favorite-outline"></i></a>
-											<a href="#" data-bs-toggle="modal"  data-bs-target="#productModal" title="Quick View"><i class="zmdi zmdi-zoom-in"></i></a>
-											<a href="#" data-bs-toggle="tooltip" data-placement="top" title="Compare"><i class="zmdi zmdi-refresh"></i></a>
-											<a href="cart.html" data-bs-toggle="tooltip" data-placement="top" title="Add To Cart"><i class="zmdi zmdi-shopping-cart-plus"></i></a>
+											</button>
 										</div>
 									</div>
 									<!-- Single-pro-slider Small-photo start -->
