--- a/order/templates/cart.html
+++ b/order/templates/cart.html
@@ -75,13 +75,13 @@
 																	</div>
 																	<!-- Single-product end -->												
 																</td>
-																<td class="product-price">$56.00</td>
+																<td class="product-price">${{item.product.sale_price}}</td>
 																<td class="product-quantity">
 																	<div class="cart-plus-minus">
 																		<input type="text" value="{{ item.quantity }}" name="qtybutton" class="cart-plus-minus-box">
 																	</div>
 																</td>
-																<td class="product-subtotal">$112.00</td>
+																<td class="product-subtotal">${{item.single_price}}</td>
 																<td class="product-remove">
 																	<a href="{% url 'order:remove_cart' item.product.id %}"><i class="zmdi zmdi-close"></i></a>
 																</td>
@@ -119,7 +119,7 @@
 																</tr>
 																<tr>
 																	<td class="text-left">Order Total</td>
-																	<td class="text-end">$170.00</td>
+																	<td class="text-end">${{grand_total}}</td>
 																</tr>
 															</tbody>
 														</table>
@@ -129,203 +129,6 @@
 										</form>		
 									</div>
 									<!-- shopping-cart end -->
-									<!-- wishlist start -->
-									<div class="tab-pane" id="wishlist">
-										<form action="#">
-											<div class="shop-cart-table">
-												<div class="table-content table-responsive">
-													<table>
-														<thead>
-															<tr>
-																<th class="product-thumbnail">Product</th>
-																<th class="product-price">Price</th>
-																<th class="product-stock">stock status</th>
-																<th class="product-add-cart">Add to cart</th>
-																<th class="product-remove">Remove</th>
-															</tr>
-														</thead>
-														<tbody>
-															<tr>
-																<td class="product-thumbnail  text-left">
-																	<!-- Single-product start -->
-																	<div class="single-product">
-																		<div class="product-img">
-																			<a href="single-product.html"><img src="img/product/2.jpg" alt="" /></a>
-																		</div>
-																		<div class="product-info">
-																			<h4 class="post-title"><a class="text-light-black" href="#">dummy product name</a></h4>
-																			<p class="mb-0">Color :  Black</p>
-																			<p class="mb-0">Size : SL</p>
-																		</div>
-																	</div>
-																	<!-- Single-product end -->				
-																</td>
-																<td class="product-price">$56.00</td>
-																<td class="product-stock">in stock</td>
-																<td class="product-add-cart">
-																	<a class="text-light-black" href="#"><i class="zmdi zmdi-shopping-cart-plus"></i></a>
-																</td>
-																<td class="product-remove">
-																	<a href="#"><i class="zmdi zmdi-close"></i></a>
-																</td>
-															</tr>
-															<tr>
-																<td class="product-thumbnail  text-left">
-																	<!-- Single-product start -->
-																	<div class="single-product">
-																		<div class="product-img">
-																			<a href="single-product.html"><img src="img/product/12.jpg" alt="" /></a>
-																		</div>
-																		<div class="product-info">
-																			<h4 class="post-title"><a class="text-light-black" href="#">dummy product name</a></h4>
-																			<p class="mb-0">Color :  Black</p>
-																			<p class="mb-0">Size :     SL</p>
-																		</div>
-																	</div>
-																	<!-- Single-product end -->												
-																</td>
-																<td class="product-price">$56.00</td>
-																<td class="product-stock">in stock</td>
-																<td class="product-add-cart">
-																	<a class="text-light-black" href="#"><i class="zmdi zmdi-shopping-cart-plus"></i></a>
-																</td>
-																<td class="product-remove">
-																	<a href="#"><i class="zmdi zmdi-close"></i></a>
-																</td>
-															</tr>
-															<tr>
-																<td class="product-thumbnail  text-left">
-																	<!-- Single-product start -->
-																	<div class="single-product">
-																		<div class="product-img">
-																			<a href="single-product.html"><img src="img/product/6.jpg" alt="" /></a>
-																		</div>
-																		<div class="product-info">
-																			<h4 class="post-title"><a class="text-light-black" href="#">dummy product name</a></h4>
-																			<p class="mb-0">Color :  Black</p>
-																			<p class="mb-0">Size :     SL</p>
-																		</div>
-																	</div>
-																	<!-- Single-product end -->												
-																</td>
-																<td class="product-price">$56.00</td>
-																<td class="product-stock">in stock</td>
-																<td class="product-add-cart">
-																	<a class="text-light-black" href="#"><i class="zmdi zmdi-shopping-cart-plus"></i></a>
-																</td>
-																<td class="product-remove">
-																	<a href="#"><i class="zmdi zmdi-close"></i></a>
-																</td>
-															</tr>
-														</tbody>
-													</table>
-												</div>
-											</div>
-										</form>									
-									</div>
-									<!-- wishlist end -->
-
-									<!-- order-complete start -->
-									<div class="tab-pane" id="order-complete">
-										<form action="#">
-											<div class="thank-recieve bg-white mb-30">
-												<p>Thank you. Your order has been received.</p>
-											</div>
-											<div class="order-info bg-white text-center clearfix mb-30">
-												<div class="single-order-info">
-													<h4 class="title-1 text-uppercase text-light-black mb-0">order no</h4>
-													<p class="text-uppercase text-light-black mb-0"><strong>m 2653257</strong></p>
-												</div>
-												<div class="single-order-info">
-													<h4 class="title-1 text-uppercase text-light-black mb-0">Date</h4>
-													<p class="text-uppercase text-light-black mb-0"><strong>june 15, 2021</strong></p>
-												</div>
-												<div class="single-order-info">
-													<h4 class="title-1 text-uppercase text-light-black mb-0">Total</h4>
-													<p class="text-uppercase text-light-black mb-0"><strong>$ 170.00</strong></p>
-												</div>
-												<div class="single-order-info">
-													<h4 class="title-1 text-uppercase text-light-black mb-0">payment method</h4>
-													<p class="text-uppercase text-light-black mb-0"><a href="#"><strong>check payment</strong></a></p>
-												</div>
-											</div>
-											<div class="shop-cart-table check-out-wrap">
-												<div class="row">
-													<div class="col-md-6">
-														<div class="our-order payment-details pr-20">
-															<h4 class="title-1 title-border text-uppercase mb-30">our order</h4>
-															<table>
-																<thead>
-																	<tr>
-																		<th><strong>Product</strong></th>
-																		<th class="text-end"><strong>Total</strong></th>
-																	</tr>
-																</thead>
-																<tbody>
-																	<tr>
-																		<td>Dummy Product Name  x 2</td>
-																		<td class="text-end">$86.00</td>
-																	</tr>
-																	<tr>
-																		<td>Dummy Product Name  x 1</td>
-																		<td class="text-end">$69.00</td>
-																	</tr>
-																	<tr>
-																		<td>Cart Subtotal</td>
-																		<td class="text-end">$155.00</td>
-																	</tr>
-																	<tr>
-																		<td>Shipping and Handing</td>
-																		<td class="text-end">$15.00</td>
-																	</tr>
-																	<tr>
-																		<td>Vat</td>
-																		<td class="text-end">$00.00</td>
-																	</tr>
-																	<tr>
-																		<td>Order Total</td>
-																		<td class="text-end">$170.00</td>
-																	</tr>
-																</tbody>
-															</table>
-														</div>
-													</div>
-													<!-- payment-method -->
-													<div class="col-md-6 mt-xs-30">
-														<div class="payment-method  pl-20">
-															<h4 class="title-1 title-border text-uppercase mb-30">payment method</h4>
-															<div class="payment-accordion">
-																<!-- Accordion start  -->
-																<h3 class="payment-accordion-toggle active">Direct Bank Transfer</h3>
-																<div class="payment-content default">
-																	<p>Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order won't be shipped until the funds have cleared in our account.</p>
-																</div> 
-																<!-- Accordion end -->
-																<!-- Accordion start -->
-																<h3 class="payment-accordion-toggle">Cheque Payment</h3>
-																<div class="payment-content">
-																	<p>Please send your cheque to Store Name, Store Street, Store Town, Store State / County, Store Postcode.</p>
-																</div>
-																<!-- Accordion end -->
-																<!-- Accordion start -->
-																<h3 class="payment-accordion-toggle">PayPal</h3>
-																<div class="payment-content">
-																	<p>Pay via PayPal; you can pay with your credit card if you don’t have a PayPal account.</p>
-																	<a href="#"><img src="img/payment/1.png" alt="" /></a>
-																	<a href="#"><img src="img/payment/2.png" alt="" /></a>
-																	<a href="#"><img src="img/payment/3.png" alt="" /></a>
-																	<a href="#"><img src="img/payment/4.png" alt="" /></a>
-																</div>
-																<!-- Accordion end --> 
-																<button class="button-one submit-button mt-15" data-text="place order" type="submit">place order</button>			
-															</div>															
-														</div>
-													</div>
-												</div>
-											</div>
-										</form>										
-									</div>
-									<!-- order-complete end -->
 								</div>
 
 							</div>
