--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -49,6 +49,8 @@
 		<!-- modernizr css -->
 		<script src="{% static 'js/vendor/modernizr-3.11.2.min.js'%}"></script>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 	</head>
 	<body>
         <div class="wrapper">
