--- a/order/templates/cart.html
+++ b/order/templates/cart.html
@@ -6,26 +6,26 @@
 <style>
 	.commen{
 		background: #f6f6f6;
-	    width: 47px;
+		width: 47px;
 		margin-left: -11px;
 		border: 5px solid #fff;
-	    color: #666666;
+		color: #666666;
 		height: 40px;
 		text-align: center;
 		font-size: 20px;"
 
- }
-.quantity-input {
-	background: #f6f6f6;
-	width: 47px;
-	border: 5px solid #fff;
-	margin: 0 3px 0 -4px;
-	color: #666666;
-	height: 40px;
-	text-align: center;
-	font-size: 14px;
-	pointer-events: none;
-}
+	}
+	.quantity-input {
+		background: #f6f6f6;
+		width: 47px;
+		border: 5px solid #fff;
+		margin: 0 3px 0 -4px;
+		color: #666666;
+		height: 40px;
+		text-align: center;
+		font-size: 14px;
+		pointer-events: none;
+	}
 </style>
 
         <div class="wrapper bg-dark-white">
@@ -173,67 +173,70 @@
 		</div>
 		<!-- WRAPPER END -->
 
-		<script>
-           $(document).ready(function(){
-			$('.changequantity').on('click',function(event){
-				event.preventDefault();
-				var productId = $(this).data('product-id');
-				var action = $(this).data('action');
-				console.log(action);
-
-				$.ajax({
-					type:'POST',
-					url:'/order/change_quantity/',
-					data:{
-						'product_id': productId,
-						'action': action,
-						'csrfmiddlewaretoken': '{{ csrf_token }}',
-					},
-					success:function(data){
-						$('#quantity-input-'+productId).val(data.new_quantity);
-						$('#single-price-' + productId).text('$' + data.new_single_price); 
-						// Show message if action was not successful
-						if  (data.status === 'Requested quantity exceeds available quantity') {
-							$('#quantity-input-'+productId).val(data.new_quantity);
-							Swal.fire({
-								icon: "error",
-								title: "Requested quantity exceeds available quantity",  // Display the message text as the title
-								toast: true,
-								position: "bottom-end",
-								showConfirmButton: false,
-								timer: 3000,
-								timerProgressBar: true,
-								didOpen: (toast) => {
-								  toast.addEventListener("mouseenter", Swal.stopTimer);
-								  toast.addEventListener("mouseleave", Swal.resumeTimer);
-								}
-							  });
-						} else if (data.status === 'Zero quantity not allowed') {
-							$('#quantity-input-'+productId).val(data.new_quantity);
-							Swal.fire({
-								icon: "error",
-								title: "Zero quantity not allowed",  // Display the message text as the title
-								toast: true,
-								position: "bottom-end",
-								showConfirmButton: false,
-								timer: 3000,
-								timerProgressBar: true,
-								didOpen: (toast) => {
-								  toast.addEventListener("mouseenter", Swal.stopTimer);
-								  toast.addEventListener("mouseleave", Swal.resumeTimer);
-								}
-							  });
-						}
-
-					},
-					error:function(error){
-						console.log('error',error);
-					}
-				})
-				
-			})
-		   })		
-		</script>
 
 {%endblock%}
 {%block footer%}{%include 'footer.html'%}{%endblock%}
+{%block javascript%}
+<script>
+	$(document).ready(function(){
+	 $('.changequantity').on('click',function(event){
+		 event.preventDefault();
+		 var productId = $(this).data('product-id');
+		 var action = $(this).data('action');
+		 console.log(action);
+
+		 $.ajax({
+			 type:'POST',
+			 url:'/order/change_quantity/',
+			 data:{
+				 'product_id': productId,
+				 'action': action,
+				 'csrfmiddlewaretoken': '{{ csrf_token }}',
+			 },
+			 success:function(data){
+				 $('#quantity-input-'+productId).val(data.new_quantity);
+				 $('#single-price-' + productId).text('$' + data.new_single_price); 
+				 // Show message if action was not successful
+				 if  (data.status === 'Requested quantity exceeds available quantity') {
+					 $('#quantity-input-'+productId).val(data.new_quantity);
+					 Swal.fire({
+						 icon: "error",
+						 title: "Requested quantity exceeds available quantity",  // Display the message text as the title
+						 toast: true,
+						 position: "bottom-end",
+						 showConfirmButton: false,
+						 timer: 3000,
+						 timerProgressBar: true,
+						 didOpen: (toast) => {
+						   toast.addEventListener("mouseenter", Swal.stopTimer);
+						   toast.addEventListener("mouseleave", Swal.resumeTimer);
+						 }
+					   });
+				 } else if (data.status === 'Zero quantity not allowed') {
+					 $('#quantity-input-'+productId).val(data.new_quantity);
+					 Swal.fire({
+						 icon: "error",
+						 title: "Zero quantity not allowed",  // Display the message text as the title
+						 toast: true,
+						 position: "bottom-end",
+						 showConfirmButton: false,
+						 timer: 3000,
+						 timerProgressBar: true,
+						 didOpen: (toast) => {
+						   toast.addEventListener("mouseenter", Swal.stopTimer);
+						   toast.addEventListener("mouseleave", Swal.resumeTimer);
+						 }
+					   });
+				 }
+
+			 },
+			 error:function(error){
+				 console.log('error',error);
+			 }
+		 })
+		 
+	 })
+	})		
+ </script>
+
+{%endblock%}
